# cepgen

./: source-lxplus.sh  test_python.py
.github/workflows/: build.yml  package.yml  release.yml  validate.yml
Cards/: diffqqbar_cfg.py  diffvm_cfg.py  lpair_cfg.py  marty_cfg.py  pptoaa_cfg.py  pptoll_cfg.py  pptoll_chili_cfg.py  pptoll_coll_gammaUPC_cfg.py  pptoll_rambo_cfg.py  pptoww_coll_cfg.py  pptoww_coll_gammaUPC_cfg.py  pptoww_rambo_cfg.py  pythia_proc_cfg.py  python_process_cfg.py
CepGen/: Generator.h
CepGen/Cards/: LpairHandler.cpp  LpairHandler.h
CepGen/CollinearFluxes/: AnalyticIntegratedPartonFlux.cpp  BudnevEPA.cpp  BudnevEPAIntegratedPartonFlux.cpp  CollinearFlux.cpp  DGLAPGluonFlux.cpp  DreesZeppenfeldIntegratedPartonFlux.cpp  EPACollinearFlux.cpp  ElectricIntegratedPartonFlux.cpp  GammaIntegrated.cpp  ImpactParameterDependentUPC.cpp  IntegratedKTFlux.cpp  IntegratedPartonFlux.cpp  IntegratedPartonFlux.h  KTIntegratedFlux.cpp  PlainEPA.cpp
CepGen/Core/: FortranInterface.cpp  Generator.cpp  GeneratorWorker.cpp  GeneratorWorker.h  GlobalFunctions.cpp  Parameters.cpp  SteeredObject.h
CepGen/EventFilter/: EventExporter.cpp
CepGen/Hadronisers/: Herwig6Hadroniser.cpp
CepGen/Integration/: GridParameters.cpp  GridParameters.h  ProcessIntegrand.cpp
CepGen/KTFluxes/: ElasticKTFluxes.cpp  InelasticKTFluxes.cpp  KMRGluonKTFlux.cpp
CepGen/Modules/: CollinearFluxFactory.h  ListModules.cpp  ModuleFactory.cpp  ModuleFactory.h  PartonFluxFactory.cpp  PartonFluxFactory.h
CepGen/PartonFluxes/: EPACollinearFlux.cpp  KTFlux.h  PartonFlux.h
CepGen/Physics/: AlphaEMBurkhardtPietrzyk.cpp  Beam.h  EPA.cpp  EPA.h  IncomingBeams.cpp  IncomingBeams.h  Kinematics.cpp  PDG.cpp  PDG.h  PhaseSpaceGenerator.cpp  PhaseSpaceGenerator.h
CepGen/Process/: CollinearPhaseSpaceGenerator.cpp  CollinearPhaseSpaceGenerator.h  FactorisedProcess.cpp  FactorisedProcess.h  FortranFactorisedProcess.cpp  FortranFactorisedProcess.h  KTPhaseSpaceGenerator.cpp  KTProcess.cpp  KTProcess.h  PhaseSpaceGenerator.h  PhaseSpaceGenerator2to4.cpp  Process.cpp  Process.h  Process2to3.cpp  Process2to3.h  Process2to4.cpp  Process2to4.h
CepGen/Process/Fortran/: KTBlocks.inc  KTStructures.h  cepgen_print.f
CepGen/StructureFunctions/: BaruahDasSarma.cpp
CepGen/Utils/: AbortHandler.h  Caller.h  Logger.h  Math.cpp  Math.h  Message.cpp  Message.h  ProcessFunctional.cpp  ProcessFunctional.h  ThreadSafeObject.h  Value.cpp  Value.h
CepGenAddOns/: CMakeLists.txt
CepGenAddOns/APFELWrapper/: APFELCollinearFlux.cpp
CepGenAddOns/BasesWrapper/: BasesCommonBlocks.h  BasesDrawer.cpp
CepGenAddOns/BoostWrapper/: CMakeLists.txt  PythonObjectsWrappers.h  PythonWrapper.cpp
CepGenAddOns/CTMLWrapper/utils/: cepgenDocGenerator.cc
CepGenAddOns/ChiliWrapper/: CMakeLists.txt  ChiliPhaseSpaceGenerator.cpp
CepGenAddOns/Common/: EventUtils.h
CepGenAddOns/EpICWrapper/: CMakeLists.txt
CepGenAddOns/HepLibWrapper/: CMakeLists.txt  EEtoLL.cpp
CepGenAddOns/HepLibWrapper/test/: eetoll.cc
CepGenAddOns/Herwig6Wrapper/: CMakeLists.txt  Herwig6Hadroniser.cpp  HerwigInterface.h  hwudat.f
CepGenAddOns/HerwigWrapper/: CMakeLists.txt  Herwig7Hadroniser.cpp  HerwigEventInterface.cpp  HerwigHadroniser.cpp
CepGenAddOns/LHAPDFWrapper/: LHAPDFCollinearFlux.cpp
CepGenAddOns/LibPlotWrapper/: CMakeLists.txt  DrawerLibPlot.cpp
CepGenAddOns/MadGraphWrapper/: MadGraphCollinearProcessBuilder.cpp  MadGraphDummyProcess.hxx  MadGraphInterface.cpp  MadGraphKTProcessBuilder.cpp  MadGraphProcess.cpp  MadGraphProcess.h  MadGraphProcess.tpp  MadGraphProcessBuilder.cpp  MadGraphProcessBuilder.h  MadGraphProcessFactory.cpp  MadGraphProcessFactory.h
CepGenAddOns/MadGraphWrapper/test/: add_particles.cc  plot_cs.cc
CepGenAddOns/MartyWrapper/: CMakeLists.txt  MartyModelFactory.h  MartyModels.cpp  MartyProcess.cpp
CepGenAddOns/PartonsWrapper/: CMakeLists.txt  PartonsProcess.cpp
CepGenAddOns/PartonsWrapper/data/: logger.properties  partons.properties.in
CepGenAddOns/PyBind11Wrapper/: CMakeLists.txt  PythonWrapper.cpp
CepGenAddOns/Pythia8Wrapper/: CepGenEventInterface.cpp  CepGenEventInterface.h  EventInterface.cpp  EventInterface.h  Hadroniser.cpp  LHEFHandler.cpp  LHEFPythiaHandler.cpp  Pythia8Hadroniser.cpp  PythiaEventInterface.cpp  PythiaEventInterface.h  PythiaProcessBuilder.cpp  RamboPhaseSpaceGenerator.cpp
CepGenAddOns/Pythia8Wrapper/test/: pythia_decay.cc  pythia_kt_hadr.cc
CepGenAddOns/PythonWrapper/: CardHandler.cpp  Environment.cpp  PythonKTProcess.cpp  PythonProcess.cpp  PythonTypes.h  Utils.cpp  Utils.h
CepGenAddOns/PythonWrapper/test/: python_output.cc  python_steer_path.cc
CepGenAddOns/ROOTWrapper/: ROOTTreeHandler.cpp
CepGenProcesses/: DiffVM.cpp  DiffVM.h  DiffractiveQQbar.cpp  LPAIR.cpp  PPtoAA.cpp  PPtoFF.cpp  nucl_to_ff.f
addons/: CMakeLists.txt
addons/ChiliWrapper/: CMakeLists.txt
addons/ChiliWrapper/src/: ChiliPhaseSpaceGenerator.cpp
addons/GammaUPCWrapper/: CMakeLists.txt
addons/GammaUPCWrapper/CepGenGammaUPC/: GammaUPCInterface.h
addons/GammaUPCWrapper/src/: GammaUPCInterface.cpp  PartonsPhaseSpaceGenerator.cpp
addons/HelacOniaWrapper/: CMakeLists.txt
addons/HelacOniaWrapper/src/: Process.cpp
addons/Pythia8Wrapper/src/: RamboPhaseSpaceGenerator.cpp
cmake/: BuildPackage.cmake
doc/: bibliography.bib
python/Config/: Core.py  DiffVM_cff.py  EPA_cfi.py  PDG_cfi.py  Process_cfi.py  collinearProcess_cfi.py  herwig7_cff.py  ktProcess_cfi.py
python/Config/Hadronisation/: herwig6_cff.py  herwigDefaults_cff.py  herwigDefaults_cfi.py  herwig_cff.py  herwig_cfi.py
python/Process/: PPtoFF.py
src/Physics/: EPA.cpp
src/utils/: cepgenDescribeModules.cc  cepgenPlotCollFluxes.cc  cepgenPlotIntegratedCrossSection.cc  cepgenPlotIntegratedPartonFluxes.cc  cepgenPlotPartonFluxes.cc  cepgenPlotPhotonLuminosity.cc  cepgenPlotTwoPartonLuminosity.cc
test/generator/: multithread.cc
test/physics/: gaussian_variables.cc
